--- a/ProcFile
+++ b/ProcFile
@@ -1,3 +1,3 @@
-web: gunicorn main.wsgi
+web: gunicorn main.wsgi:
 release:python manage.py makemigrations --no-input
 release:python manage.py migrate --no-input
