--- a/ProcFile
+++ b/ProcFile
@@ -1,3 +1,1 @@
-web: gunicorn main.wsgi:
-release:python manage.py makemigrations --no-input
-release:python manage.py migrate --no-input
+web: gunicorn main.wsgi
